--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,10 @@ android {
     buildFeatures{
         viewBinding true
     }
+
+    dataBinding{
+        enabled = true
+    }
 }
 
 dependencies {
